--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -1051,7 +1051,7 @@ t4option0_0 | alt text
   </script>
 {%- endunless -%}
 
-<script type="application/ld+json">
+<script type="application/json">
   {
     "@context": "http://schema.org/",
     "@type": "Product",
