--- a/sections/opinew_review_carousel.liquid
+++ b/sections/opinew_review_carousel.liquid
@@ -1,5 +1,5 @@
 
-    <div id='opinew_carousel_plugin_app' class="kg-opinew-review-carousel-content-wrapper" ></div>
+    <div id='opinew_carousel_plugin_app'></div>
     {% schema %}
         {
             "presets": [{
