--- a/sections/products-countdown-deal.liquid
+++ b/sections/products-countdown-deal.liquid
@@ -67,7 +67,7 @@
             <div class="t4s-top-inner" timeline hdt-reveal="slide-in">
                 {%- if se_stts.top_heading != blank -%}<h3 class="t4s-section-title t4s-title"><span>{{ se_stts.top_heading }}</span></h3>{%- endif -%} 
                 {%- if se_stts.date != blank -%} 
-                    <div class="t4s-time-box">
+                    <div class="load_async t4s-time-box">
                         {%- if se_stts.cd_txt != blank -%}<span class="t4s-countdown-title">{{ se_stts.cd_txt }}</span>{%- endif -%} 
                         {%- if section_layout == "3" -%}<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-clock"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>{%- endif -%}
                         <div class="t4s-countdown-sale">
