--- a/sections/search-hidden.liquid
+++ b/sections/search-hidden.liquid
@@ -108,7 +108,7 @@
              </div>
          {%- else -%}
              <div data-skeleton-search class="t4s-skeleton_wrap t4s-dn">
-                 <div class="t4s-skeleton_content t4s-row t4s-row-cols-2 t4s-justify-content-center t4s-gx-lg-30 t4s-gy-lg-30 t4s-gx-md-20 t4s-gy-md-20 t4s-gx-10 t4s-gy-20">
+                 <div class="load_async t4s-skeleton_content t4s-row t4s-row-cols-2 t4s-justify-content-center t4s-gx-lg-30 t4s-gy-lg-30 t4s-gx-md-20 t4s-gy-md-20 t4s-gx-10 t4s-gy-20">
                      {%- for i in (1..4) -%}
                          <div class="t4s-col-item t4s-col-auto">
                              <div class="t4s-row">
