--- a/snippets/article_loop_2.liquid
+++ b/snippets/article_loop_2.liquid
@@ -1,6 +1,6 @@
 {%- assign image = article.image -%}
 {%- assign article_url = article.url -%}
-<article class="t4s-col-item t4s-article t4s-article-item t4s-article-des-2">
+<article class="asyncLoad t4s-col-item t4s-article t4s-article-item t4s-article-des-2">
 	<div class="t4s-article-inner" timeline hdt-reveal="slide-in">
 		{%- if image != blank -%}
 			<div class="t4s-article-thumb">
