--- a/snippets/heading_search.liquid
+++ b/snippets/heading_search.liquid
@@ -15,7 +15,7 @@
  -%}
 
 {%- if se_blocks.size > 0 -%}
-    <div class="t4s-page-head t4s-oh t4s-text-center"> 
+    <div class="asyncLoad t4s-page-head t4s-oh t4s-text-center"> 
         <div class="t4s-container t4s-pr t4s-z-100"> 
             {%- for block in se_blocks -%} 
                 {%- assign bk_stts = block.settings -%}
