--- a/snippets/rating_star.liquid
+++ b/snippets/rating_star.liquid
@@ -2,7 +2,7 @@
     <div class="t4s-rating-wapper">
         {%- case rating -%}
             {%- when 1 -%}
-            <div class="t4s-rating rating_1">
+            <div class="asyncLoad t4s-rating rating_1">
                 <svg viewBox="0 0 32 32" width="13px" height="13px"><use xlink:href="#t4s_star"></use></svg><svg  class="t4s-last-star" viewBox="0 0 32 32" width="13px" height="13px"><use xlink:href="#t4s_star"></use></svg><svg  class="t4s-last-star" viewBox="0 0 32 32" width="13px" height="13px"><use xlink:href="#t4s_star"></use></svg><svg  class="t4s-last-star" viewBox="0 0 32 32" width="13px" height="13px"><use xlink:href="#t4s_star"></use></svg><svg  class="t4s-last-star" viewBox="0 0 32 32" width="13px" height="13px"><use xlink:href="#t4s_star"></use></svg>
             </div>
             {%- when 1.5 -%} 
