--- a/snippets/review_grid_other.liquid
+++ b/snippets/review_grid_other.liquid
@@ -1,4 +1,4 @@
-<span class="stamped-product-reviews-badge" data-product-sku="{{ product.handle }}" data-id="{{ product.id }}" data-product-type="{{ product.type }}" data-product-title="{{ product.title }}"  style="display:block;">{{ product.metafields.stamped.badge }}</span>
+<span class="asyncLoad stamped-product-reviews-badge" data-product-sku="{{ product.handle }}" data-id="{{ product.id }}" data-product-type="{{ product.type }}" data-product-title="{{ product.title }}"  style="display:block;">{{ product.metafields.stamped.badge }}</span>
 
 {%- comment -%}
 DOCUMENT https://kalles-docs.the4.co/features/custom-review-app#custom-review-apps
