--- a/snippets/search_form.liquid
+++ b/snippets/search_form.liquid
@@ -1,5 +1,5 @@
 <form action="{{ routes.search_url }}" method="get" role="search" class="t4s-search-form t4s-search-page-form js_frm_search_none">
-  <div class="input-group input-group--nowrap">
+  <div class="asyncLoad input-group input-group--nowrap">
     <div class="input-group__field input-group__field--connected t4s-search-form__input-wrapper row no-gutters tl">
          {%- if search_type and false -%}
          <div class="frm_search_cat col-auto">
