--- a/snippets/var_adm.liquid
+++ b/snippets/var_adm.liquid
@@ -1,6 +1,6 @@
 {%- assign search_url = routes.search_url -%}
 <div class="admin_t4_tools t4_tools_btns">
-  <button class="admin_t4_tools_btn"><i class="las la-tools"></i><i class="las la-times"></i></button>
+  <button class="asyncLoad admin_t4_tools_btn"><i class="las la-tools"></i><i class="las la-times"></i></button>
   <div class="admin_t4_tools__content">
     <ul>
       <li><a href="https://the4.gitbook.io/gecko/?locale=en" class="admin_t4_tools__item admin_t4_tools__item--separated" target="_blank"><i class="las la-book mr__5"></i>View documentation</a></li>
