--- a/assets/t4s-base.css
+++ b/assets/t4s-base.css
@@ -530,10 +530,12 @@ em {
     padding-left: calc(var(--ts-gutter-x) * 0.5);
     margin-top: var(--ts-gutter-y);
     box-sizing: border-box;
-    flex-shrink: 0;
     width: 100%;
     max-width: 100%;
-    flex: 0 0 auto;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: auto;
+
 }
 .t4s-col {
     flex: 1 0 0%;
