--- a/sections/featured-product.liquid
+++ b/sections/featured-product.liquid
@@ -339,7 +339,8 @@
                   assign lh_pr = bk_stts.lh_pr | append: 'px'
                 endif
               -%}
-              <h1 class="t4s-product__title" style="--title-family:var(--font-family-{{ bk_stts.fnt_df_pr }});--title-style:{{ bk_stts.txt_tr_pr }};--title-size:{{ bk_stts.size_pr }}px;--title-weight:{{ bk_stts.fw_pr }};--title-line-height:{{ lh_pr }};--title-spacing:{{ bk_stts.ls_pr }}px;--title-color:{{ bk_stts.pr_title_color }};--title-color-hover:{{ bk_stts.pr_title_color_hover }};" {{ block.shopify_attributes }}><a href="{{ product.url }}">{{ product.title | escape }}</a></h1>
+              <h1 class="t4s-product__title" style="--title-family:var(--font-family-{{ bk_stts.fnt_df_pr }});--title-style:{{ bk_stts.txt_tr_pr }};--title-size:{{ bk_stts.size_pr }}px;--title-weight:{{ bk_stts.fw_pr }};--title-line-height:{{ lh_pr }};--title-spacing:{{ bk_stts.ls_pr }}px;--title-color:{{ bk_stts.pr_title_color }};--title-color-hover:{{ bk_stts.pr_title_color_hover }};" {{ block.shopify_attributes }}><a href="{{ product.url }}">{{ product.title | escape }}</a>
+<div class='opinew-stars-plugin-product-list'>{% render 'opinew_review_stars_lists' product:product %}</div></h1>
               {%- when 'price_review' -%}
                 <div class="t4s-product__price-review" style="--price-size:{{ bk_stts.size_price_pr }}px;--price-weight:{{ bk_stts.fw_price_pr }};--primary-price-color:{{ bk_stts.primary_price_color }};--secondary-price-color:{{ bk_stts.secondary_price_color }};--price-sale-color:{{ bk_stts.price_sale }};--primary-stock-color:{{ bk_stts.primary_stock_color }};--secondary-stock-color:{{ bk_stts.secondary_stock_color }};--border-block-price-color:{{ bk_stts.border_color }}">
                     <div class="t4s-price-stock t4s-price-stock-border__{{ bk_stts.use_border }} {% if bk_stts.show_inline %}t4s-d-flex t4s-align-items-center t4s-justify-content-between{% else %}t4s-price-stock-inline__false{% endif %}">
