--- a/sections/main-article.liquid
+++ b/sections/main-article.liquid
@@ -344,7 +344,7 @@
   </div>
   {{- html_layout[1] -}}
 </div>
-<script type="application/ld+json">
+<script type="application/json">
   {
     "@context": "http://schema.org",
     "@type": "Article",
