--- a/sections/video-featured.liquid
+++ b/sections/video-featured.liquid
@@ -20,7 +20,7 @@
 {%- if se_height != "t4s_ratio_fh" -%}
   {%- capture append_style -%}--aspect-ratio-cusdt:{{ section.settings.height_dk }}px;--aspect-ratio-custb:{{ section.settings.height_tb }}px;--aspect-ratio-cusmb:{{ section.settings.height_mb }}px;{%- endcapture -%}
 {%- endif -%}
-<div class="t4s-section-inner t4s_nt_se_{{ sid }}" {% render 'section_style', se_stts: section.settings, append_style: append_style -%}>
+<div class="load_async t4s-section-inner t4s_nt_se_{{ sid }}" {% render 'section_style', se_stts: section.settings, append_style: append_style -%}>
   {{- html_layout[0] -}}
     <div data-t4s-animate class="t4s-bg-video t4s-video t4s-row-cols-1 t4s-gx-0 {{ se_height }} t4scuspx1_{{ section.settings.custom_mb }} t4scuspx2_{{ section.settings.custom_tb }} t4scuspx3_{{ section.settings.custom_dk }}">
       <div class="t4s-hero-inner t4s-col-item t4s-pr t4s-oh" timeline hdt-reveal="slide-in">
