--- a/sections/video-popup-inline.liquid
+++ b/sections/video-popup-inline.liquid
@@ -55,7 +55,7 @@
 <div class="t4s-section-inner t4s_nt_se_{{ sid }} {{ stt_layout }}" {% render 'section_style', se_stts: se_stts, append_style: append_style -%} data-t4s-animate>
     {{- html_layout[0] -}} 
         <div class="t4s-video-popup-inline t4s-bg-video t4s-pr t4s-row t4s-row-cols-1 t4s-gx-0 t4s-video t4s_ratio_mix {{ se_height }} t4s_ratio_cuspx_mb_{{ se_stts.custom_mb }} t4s_ratio_cuspx_tb_{{ se_stts.custom_tb }} t4s_ratio_cuspx_{{ se_stts.custom_dk }}" data-video-poster>
-            <div class="t4s-col-item" timeline hdt-reveal="slide-in">
+            <div class="load_async t4s-col-item" timeline hdt-reveal="slide-in">
                 <div data-parallax-t4s{{ IsParallax }} class="{% if IsParallax %}t4s-parallax {% endif %}t4s-hero-inner t4s-pr t4s-oh t4s_cover t4s_ratio" data-video-insert style="--ratioapt: {{ image.aspect_ratio | default: 1.7777 }};--ratioaptmb: {{ mb_image.aspect_ratio | default: 1.7777 }};"> 
                     {%- if image != blank -%}  
                             {%- liquid
