--- a/snippets/collection_template.liquid
+++ b/snippets/collection_template.liquid
@@ -7,7 +7,7 @@
 -%}
 
 {{ html[0] }}
-<div class="t4s-col-item t4s-collection-item t4s-coll-style-{{ collection_des }} coll-item-{{ stt }} t4s-col-lg-{{ html[1] }} t4s-col-md-{{ html[2] }} t4s-col-{{ html[3] }}" id="b_{{ block.id }}">      
+<div class="asyncLoad t4s-col-item t4s-collection-item t4s-coll-style-{{ collection_des }} coll-item-{{ stt }} t4s-col-lg-{{ html[1] }} t4s-col-md-{{ html[2] }} t4s-col-{{ html[3] }}" id="b_{{ block.id }}">      
   <div class="t4s-cat-content t4s-source-{{ source }} t4s-eff t4s-eff-{{ b_effect }} t4s-eff-img-{{ img_effect }} t4s-text-center t4s-pr t4s-oh" timeline hdt-reveal="slide-in">
     <div class="t4s-coll-img t4s-pr" data-cacl-slide>
     {% if collection_des == "11" %}
