--- a/snippets/gift-card-recipient-form.liquid
+++ b/snippets/gift-card-recipient-form.liquid
@@ -9,7 +9,7 @@
   {% render 'gift-card-recipient-form', product: product, form: form, section: section %}
 {% endcomment %}
 
-<div class="customer">
+<div class="asyncLoad customer">
   {%- assign gift_card_recipient_control_flag = 'properties[__shopify_send_gift_card_to_recipient]' -%}
   <script src="{{ 'recipient-form.js' | asset_url }}" defer="defer"></script>
   <recipient-form class="recipient-form" data-section-id="{{ section.id }}" data-product-variant-id="{{ product.selected_or_first_available_variant.id }}">
