--- a/snippets/grouped-form.liquid
+++ b/snippets/grouped-form.liquid
@@ -12,7 +12,7 @@ assign show_product_current = bk_stts.show_product_current -%}
 
 {{ 't4s-grouped.css' | asset_url | stylesheet_tag }}
 
-<div class="t4s-product-form__variants t4s-grouped-product is-btn-full-width__{{ bk_stts.btn_atc_full }} is-btn-atc-txt-{{ bk_stts.btn_txt }}" style="--wishlist-color: {{ bk_stts.wishlist_color }};--wishlist-hover-color: {{ bk_stts.wishlist_color_hover }};--wishlist-active-color: {{ bk_stts.wishlist_color_active }};--compare-color: {{ bk_stts.compare_color }};--compare-hover-color: {{ bk_stts.compare_color_hover }};--compare-active-color: {{ bk_stts.compare_color_active }};" {{ shopify_attributes }}>
+<div class="asyncLoad t4s-product-form__variants t4s-grouped-product is-btn-full-width__{{ bk_stts.btn_atc_full }} is-btn-atc-txt-{{ bk_stts.btn_txt }}" style="--wishlist-color: {{ bk_stts.wishlist_color }};--wishlist-hover-color: {{ bk_stts.wishlist_color_hover }};--wishlist-active-color: {{ bk_stts.wishlist_color_active }};--compare-color: {{ bk_stts.compare_color }};--compare-hover-color: {{ bk_stts.compare_color_hover }};--compare-active-color: {{ bk_stts.compare_color_active }};" {{ shopify_attributes }}>
 {%- form 'product', product, id: form_id, class: 't4s-grouped__frm', novalidate: 'novalidate', data-groups-pr-form: '' , data-type: 'add-to-cart-form' -%}
 	<table class="t4s-grouped-product-list">
 	   <tbody>
