--- a/snippets/heading_blog.liquid
+++ b/snippets/heading_blog.liquid
@@ -10,7 +10,7 @@
                         {%- if bk_stts.content == blank -%}{%- continue -%}{%- endif -%}<div class="t4s-desc-head t4s-bl-item t4s-animation-none t4s-text-bl t4s-fnt-fm-{{ bk_stts.fontf }} t4s-font-italic-{{ bk_stts.font_italic }} t4s-uppercase-{{ bk_stts.font_uppercase }} t4s-hidden-mobile-{{ bk_stts.hidden_mobile }} t4s-text-shadow-{{ bk_stts.text_shadow }}" data-lh="{{ bk_stts.text_lh_mb }}" data-lh-md="{{ bk_stts.text_lh_tb }}" data-lh-lg="{{ bk_stts.text_lh }}" data-lh="{{ bk_stts.text_lh_mb }} t4s-rte" data-lh-md="{{ bk_stts.text_lh_tb }}" data-lh-lg="{{ bk_stts.text_lh }}" {%- render 'bk_cus_style', type: 'custom_text', bk_stts: bk_stts -%}>{{ bk_stts.content }}</div>
                     {%- when '3' -%}
                         <nav class="t4s-breadcrumbs" role="navigation" aria-label="breadcrumbs" style="--brc-cl-link:{{ bk_stts.breadcrumb_color_link }};--brc-cl:{{ bk_stts.breadcrumb_color }};--brc-mgb:{{ bk_stts.brc_mgb }}px;--brc-mgb-tb:{{ bk_stts.brc_mgb_tb }}px;--brc-mgb-mb:{{ bk_stts.brc_mgb_mb }}px;">
-                            <ul class="t4s-breadcrumbs__list">
+                            <ul class="asyncLoad t4s-breadcrumbs__list">
                                 <li class="t4s-breadcrumbs__item">
                                     <a href="{{ routes.root_url }}">{{ 'general.breadcrumb.home' | t }}</a> <svg class="t4s-icon-arrow" viewBox="0 0 100 100"><path d="M 10,50 L 60,100 L 70,90 L 30,50  L 70,10 L 60,0 Z" class="arrow" transform="translate(100, 100) rotate(180) "></path></svg> 
                                 </li>
