--- a/snippets/heading_page.liquid
+++ b/snippets/heading_page.liquid
@@ -39,7 +39,7 @@
                         <li class="t4s-breadcrumbs__item">
                             <a href="{{ routes.root_url }}" class="t4s-d-inline-block">{{ 'general.breadcrumb.home' | t }}</a> <svg class="t4s-icon-arrow" viewBox="0 0 100 100"><path d="M 10,50 L 60,100 L 70,90 L 30,50  L 70,10 L 60,0 Z" class="arrow" transform="translate(100, 100) rotate(180)"></path></svg>
                         </li>
-                        <li class="t4s-breadcrumbs__item">{{ heading_title }}</li> 
+                        <li class="asyncLoad t4s-breadcrumbs__item">{{ heading_title }}</li> 
                     </ul>
                 </nav> 
         {%- endcase -%} 
