--- a/snippets/menu_blocks.liquid
+++ b/snippets/menu_blocks.liquid
@@ -9,7 +9,13 @@ bk_stts.lazy_mn and admin_sp == false
   assign showArrow = se_stts.arrow
   assign request_path = request.path -%}
 
-<nav class="t4s-navigation t4s-text-{{ se_stts.align }} t4s-nav__{{ se_stts.hover }} t4s-nav-arrow__{{ se_stts.arrow }}"><ul data-menu-nav id="t4s-nav-ul" class="t4s-nav__ul t4s-d-inline-flex t4s-flex-wrap t4s-align-items-center">
+{% if template.name == 'collection' %}
+  {% assign kg_current_collection_handle = collection.handle %}
+  {% assign kg_current_collection_meta_handle = collection.metafields.coll.menu %}
+{% endif %}
+
+  
+<nav class="asyncLoad t4s-navigation t4s-text-{{ se_stts.align }} t4s-nav__{{ se_stts.hover }} t4s-nav-arrow__{{ se_stts.arrow }}"><ul data-menu-nav id="t4s-nav-ul" class="t4s-nav__ul t4s-d-inline-flex t4s-flex-wrap t4s-align-items-center">
 {%- for block in se_blocks -%}
   <!-- KG CODE 21-02-2025 -->
   {% if forloop.index > 7 %}
@@ -30,9 +36,18 @@ bk_stts.lazy_mn and admin_sp == false
          assign bk_link = root_url
       endif -%}
 
+    {% assign kg_activem_menu_class = "" %}
+    {% if kg_current_collection and bk_link contains kg_current_collection %}
+      {% assign kg_activem_menu_class = "kg-active-header-nav-menu" %}
+    {% elsif bk_link contains kg_current_collection_meta_handle %}
+      {% assign kg_activem_menu_class = "kg-active-header-nav-menu" %}
+    {% elsif forloop.first and kg_current_collection == blank and kg_current_collection_meta_handle == blank %}
+      {% assign kg_activem_menu_class = "kg-active-header-nav-menu" %}
+    {% endif %}
+  
    {%- case block.type -%}
 		{%- when 'mega' -%}
-	      <li id="item_{{ blockID }}" data-placement="{{ bk_stts.pos_sub | default: placement }}" class="t4s-type__{{ block.type }} menu-width__{{ bk_stts.wid }} t4s-menu-item has--children menu-has__offsets {{ class_active }} kg-header-megamenu-block-content-wrapper" {{ block.shopify_attributes }}>
+	      <li id="item_{{ blockID }}" data-placement="{{ bk_stts.pos_sub | default: placement }}" class="t4s-type__{{ block.type }} menu-width__{{ bk_stts.wid }} t4s-menu-item has--children menu-has__offsets {{ class_active }} {{ kg_activem_menu_class }} kg-header-megamenu-block-content-wrapper" {{ block.shopify_attributes }}>
 	         <a class="t4s-lh-1 t4s-d-flex t4s-align-items-center t4s-pr" href="{{ bk_link }}" target="{{ bk_stts.open_link }}"{% if bk_stts.cus_cl %} style="color:{{ bk_stts.cl }}"{% endif %}>{%- render 'title_menu', bk_stts: bk_stts, showArrow: showArrow -%}</a>
 	         <div id="content_{{ blockID }}" class="t4s-sub-menu t4s-pa t4s-op-0 t4s-pe-none t4s-current-scrollbar">
 	         	<div class="t4s-container"{% if bk_stts.wid != 'full nav_t4cnt' %} style="width:{{ bk_stts.cus_wid }}px"{% endif %}>
@@ -42,7 +57,7 @@ bk_stts.lazy_mn and admin_sp == false
 	      </li>
 
 		{%- when 'drop' -%}
-	      <li id="item_{{ blockID }}" data-placement="{{ bk_stts.pos_sub | default: placement }}" class="t4s-type__{{ block.type }} t4s-menu-item has--children menu-has__offsets menu-pos__{{ bk_stts.pos }} {{ class_active }}" {{ block.shopify_attributes }}>
+	      <li id="item_{{ blockID }}" data-placement="{{ bk_stts.pos_sub | default: placement }}" class="t4s-type__{{ block.type }} t4s-menu-item has--children menu-has__offsets menu-pos__{{ bk_stts.pos }} {{ class_active }} {{ kg_activem_menu_class }}" {{ block.shopify_attributes }}>
 	         <a class="t4s-lh-1 t4s-d-flex t4s-align-items-center t4s-pr" href="{{ bk_link }}" target="{{ bk_stts.open_link }}"{% if bk_stts.cus_cl %} style="color:{{ bk_stts.cl }}"{% endif %}>{%- render 'title_menu', bk_stts: bk_stts, showArrow: showArrow -%}</a>
 	         {%- if linklists[bk_stts.menu].links.size > 0 -%}
 	         <div id="content_{{ blockID }}" class="t4s-sub-menu t4s-pa t4s-op-0 t4s-pe-none">
@@ -56,7 +71,7 @@ bk_stts.lazy_mn and admin_sp == false
 	      </li>
 
 		{%- else -%}
-		  <li id="item_{{ blockID }}" class="t4s-type__simple t4s-menu-item {{ class_active }}" {{ block.shopify_attributes }}><a class="t4s-lh-1 t4s-d-flex t4s-align-items-center t4s-pr" href="{{ bk_link }} " target="{{ bk_stts.open_link }}" {% if forloop.index == 1 %}style="font-weight: 900;"{% endif %} {% if bk_stts.cus_cl %} style="color:{{ bk_stts.cl }}"{% endif %}>{%- render 'title_menu', bk_stts: bk_stts, showArrow: false -%}</a></li>
+		  <li id="item_{{ blockID }}" class="t4s-type__simple t4s-menu-item {{ class_active }} {{ kg_activem_menu_class }}" {{ block.shopify_attributes }}><a class="t4s-lh-1 t4s-d-flex t4s-align-items-center t4s-pr" href="{{ bk_link }} " target="{{ bk_stts.open_link }}" {% if bk_stts.cus_cl %} style="color:{{ bk_stts.cl }}"{% endif %}>{%- render 'title_menu', bk_stts: bk_stts, showArrow: false -%}</a></li>
 
 	{%- endcase -%}
 
