--- a/snippets/menu_dropdown.liquid
+++ b/snippets/menu_dropdown.liquid
@@ -17,7 +17,7 @@
 	                  </ul>
 	               </li>
                {%- else -%}
-                  <li class="t4s-menu-item{% if child_link.active %} is--current{% endif %}"><a href="{{ child_link.url }}">{%- render 'title_menu2', title: child_link.title -%}</a></li>
+                  <li class="asyncLoad t4s-menu-item{% if child_link.active %} is--current{% endif %}"><a href="{{ child_link.url }}">{%- render 'title_menu2', title: child_link.title -%}</a></li>
                {%- endif -%}
             {%- endfor -%}
          </ul>
