--- a/snippets/newsletter.liquid
+++ b/snippets/newsletter.liquid
@@ -67,7 +67,7 @@
 {%- capture icon_Html -%}
    {%- if buttonIcon -%}
     {% if newl_des != '10' %}
-      <svg viewBox="0 0 32 32" width="18" aria-hidden="true" focusable="false" class="t4s-newsletter__icon-arrow">
+      <svg viewBox="0 0 32 32" width="18" aria-hidden="true" focusable="false" class="asyncLoad t4s-newsletter__icon-arrow">
         <path d="M 18.71875 6.78125 L 17.28125 8.21875 L 24.0625 15 L 4 15 L 4 17 L 24.0625 17 L 17.28125 23.78125 L 18.71875 25.21875 L 27.21875 16.71875 L 27.90625 16 L 27.21875 15.28125 Z" fill="currentColor"/>
       </svg>
     {% endif %}
