--- a/snippets/pagination.liquid
+++ b/snippets/pagination.liquid
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="{{ 't4s-pagination.css' | asset_url }}" media="print" onload="this.media='all'">
   <noscript>{{ 't4s-pagination.css' | asset_url | stylesheet_tag }}</noscript>
 
-  <div class="t4s-pagination-wrapper t4s-w-100">
+  <div class="asyncLoad t4s-pagination-wrapper t4s-w-100">
     <nav class="t4s-pagination" role="navigation" aria-label="{{ 'general.pagination.label' | t }}">
       <ul data-ntjax-wrap{{ ajax }} class="t4s-pagination__list list-unstyled" role="list">
       {%- if paginate.previous -%}
