--- a/snippets/product-grid-item6.liquid
+++ b/snippets/product-grid-item6.liquid
@@ -139,7 +139,7 @@ endif -%}
         </div>
       </div>
       {%- if show_list_btns -%}
-        <div class="t4s-product-btns t4s-product-info__btns">
+        <div class="asyncLoad t4s-product-btns t4s-product-info__btns">
            {%- if settings.enable_quickview %}<a data-id="{{ pid }}" href="{{ pr_url }}" data-tooltip rel="nofollow" class="t4s-pr-item-btn t4s-pr-quickview" data-action-quickview><span class="t4s-svg-pr-icon"><svg viewBox="0 0 24 24"><use xlink:href="#t4s-icon-qv"></use></svg></span><span class="t4s-text-pr">{{ 'products.product_card.quick_view' | t }}</span></a>{% endif %}
            {%- if settings.enable_atc %}{%- render 'product-atc', pr_available: product.available, pr_url: pr_url, isDefault: isDefault, isPreoder: isPreoder, isExternal: isExternal, external_title: external_title, external_link: external_link, isGrouped: isGrouped, current_variant: current_variant, pid: pid, cus_qty: cus_qty, max_qty: max_qty -%}{% endif %}
         </div>
