--- a/snippets/product-group-item.liquid
+++ b/snippets/product-group-item.liquid
@@ -11,7 +11,7 @@
 			{%- if image != blank -%}
 				<a href="{{ pr_url }}">
 				    <div class="t4s_ratio t4s-bg-11" style="background: url({{ image | image_url: width: 1 }});--{{ imgatt }}aspect-ratioapt: {{ image.aspect_ratio | default: 1 }}">
-						<img class="lazyloadt4s t4s-lz--fadeIn" data-src="{{ image | image_url: width: 1 }}" data-widths="[400,600,700,800,900,1000,1200,1400,1600]" data-optimumx="2" data-sizes="auto" src="{% render 'img_svg', w: image.width, h: image.height %}" width="{{ image.width }}" height="{{ image.height }}" alt="{{ image.alt | escape }}" loading="lazy">
+						<img class="asyncLoad lazyloadt4s t4s-lz--fadeIn" data-src="{{ image | image_url: width: 1 }}" data-widths="[400,600,700,800,900,1000,1200,1400,1600]" data-optimumx="2" data-sizes="auto" src="{% render 'img_svg', w: image.width, h: image.height %}" width="{{ image.width }}" height="{{ image.height }}" alt="{{ image.alt | escape }}" loading="lazy">
 					</div>
 			    </a>
 			{%- endif -%}
