--- a/snippets/product-img.liquid
+++ b/snippets/product-img.liquid
@@ -2,5 +2,5 @@
     <img data-pr-img class="t4s-product-main-img lazyloadt4s" loading="lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="{{ image | image_url: width: 1 }}" data-widths="[100,200,330,400,500,600,700,800,900]" data-optimumx="2" data-sizes="auto" width="{{ image.width }}" height="{{ image.height }}" alt="{{ image.alt | escape }}">
     <span class="lazyloadt4s-loader"></span>
     <div data-replace-img2></div>
-    <noscript><img class="t4s-product-main-img" loading="lazy" width="{{ image.width }}" height="{{ image.height }}" src="{{ image | image_url: width: 600 }}"  alt="{{ image.alt | escape }}"></noscript>
+    <noscript><img class="asyncLoad t4s-product-main-img" loading="lazy" width="{{ image.width }}" height="{{ image.height }}" src="{{ image | image_url: width: 600 }}"  alt="{{ image.alt | escape }}"></noscript>
 </div>
