--- a/snippets/product-rating.liquid
+++ b/snippets/product-rating.liquid
@@ -5,7 +5,7 @@
   {%- when '2' -%}
     <div class="ryviu-collection t4s-grid-rating"><ryviu-widget-total collection=1 reviews_data="{{ product.metafields.ryviu.product_reviews_info | escape }}" product_id="{{ product.id }}" handle="{{ product.handle }}"></ryviu-widget-total></div>  
   {%- when '3' -%}
-    <div product-id="{{ product.id }}" class="arv-collection arv-collection--{{ product.id }} t4s-grid-rating"></div>
+    <div product-id="{{ product.id }}" class="asyncLoad arv-collection arv-collection--{{ product.id }} t4s-grid-rating"></div>
   {%- when '4' -%}
     <div class="loox-rating t4s-grid-rating" data-id="{{ product.id }}" data-rating="{{ product.metafields.loox.avg_rating }}" data-raters="{{ product.metafields.loox.num_reviews }}"></div>
   {%- when '5' -%}
