--- a/snippets/quote_7.liquid
+++ b/snippets/quote_7.liquid
@@ -4,7 +4,7 @@
             {%- assign image = bk_stts.image_avata -%} 
             <div class="t4s-quote-avatar lazyloadt4s" data-bgset="{{ image | image_url: width: 1 }}" data-sizes="auto" data-optimumx="2" style="background-image: url({{ image | image_url: width: 1 }};"></div>
         {%- endif -%}
-        <div class="t4s-quote-au-rev">
+        <div class="asyncLoad t4s-quote-au-rev">
             {%- render 'rating_star', rating: bk_stts.rating -%}
             <div class="t4s-quote-texts t4s-rte">{{ bk_stts.content }}</div>
             <div class="t4s-quote-author">{{ bk_stts.title }}</div>
