--- a/snippets/render_bottom.liquid
+++ b/snippets/render_bottom.liquid
@@ -10,7 +10,7 @@
   endif
 -%}
 
-<svg aria-hidden="true" focusable="false" role="presentation" xmlns="http://www.w3.org/2000/svg" class="t4s-d-none"><defs>
+<svg aria-hidden="true" focusable="false" role="presentation" xmlns="http://www.w3.org/2000/svg" class="asyncLoad t4s-d-none"><defs>
   <symbol id="t4s-icon-btn" viewBox="0 0 14 10" fill="none">
     <path fill-rule="evenodd" clip-rule="evenodd" d="M8.537.808a.5.5 0 01.817-.162l4 4a.5.5 0 010 .708l-4 4a.5.5 0 11-.708-.708L11.793 5.5H1a.5.5 0 010-1h10.793L8.646 1.354a.5.5 0 01-.109-.546z" fill="currentColor"></path>
   </symbol>
@@ -493,3 +493,4 @@
 {%- if settings.colors_css %}<link rel="stylesheet" href="{{ 'colors.css' | asset_url }}" media="print" onload="this.media='all'">{% endif -%} 
 {%- if settings.t4s_custom_css %}{{- 'custom.css' | asset_url | stylesheet_tag: preload: true -}}{% endif -%}
 {%- if admin_sp %}<style>.t4s-section-admn-fixed { position: fixed;top: 100px;pointer-events: none; z-index: -1;opacity: 0; }.t4s-section-admn2-fixed { position: fixed;top: 100px;z-index: 468; }</style>{% endif -%}
+<script src="{{ 'custom.min.js' | asset_url }}"></script>
